...
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_menu_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="center"
...
                android:textColor="@color/grey_40" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/responseFeedMenuBotton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="center"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/grey_40" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/roommateFeedMenuButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="center"
...
                android:textColor="@color/grey_40"
                android:textSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/top_menu_create_a_post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:gravity="center"
...
                app:layout_constraintHorizontal_bias="0.857"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.171" />

            <EditText
                android:id="@+id/address"
                android:layout_width="394dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_round"
                android:elevation="-1dp"
                android:ems="10"
...
                app:layout_constraintHorizontal_bias="0.352"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.179" />

            <EditText
                android:id="@+id/rent"
                android:layout_width="398dp"
                android:layout_height="34dp"
                android:background="@drawable/edit_text_round"
                android:ems="10"
                android:hint="Rent"
                android:inputType="textPersonName"
...
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.26" />

            <EditText
                android:id="@+id/utilities"
                android:layout_width="395dp"
                android:layout_height="34dp"
                android:background="@drawable/edit_text_round"
                android:ems="10"
                android:hint="Utilities"
                android:inputType="textPersonName"
...
                app:layout_constraintHorizontal_bias="0.312"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.226" />

            <EditText
                android:id="@+id/numBeds"
                android:layout_width="399dp"
                android:layout_height="35dp"
                android:background="@drawable/edit_text_round"
                android:ems="10"
                android:hint="Number of Beds"
                android:inputType="textPersonName"
...
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.294" />

            <EditText
                android:id="@+id/dailySchedule"
                android:layout_width="393dp"
                android:layout_height="39dp"
                android:background="@drawable/edit_text_round"
                android:ems="10"
                android:hint="Your Daily Schedule"
                android:inputType="textPersonName"
...
                app:layout_constraintHorizontal_bias="0.611"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.359" />

            <EditText
                android:id="@+id/academicFocus"
                android:layout_width="398dp"
                android:layout_height="39dp"
                android:background="@drawable/edit_text_round"
                android:ems="10"
                android:hint="Your Academic Focus"
                android:inputType="textPersonName"
...
                app:layout_constraintHorizontal_bias="0.846"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.396" />

            <EditText
                android:id="@+id/otherInfo"
                android:layout_width="394dp"
                android:layout_height="133dp"
                android:background="@drawable/edit_text_round"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.327" />

            <EditText
                android:id="@+id/personality"
                android:layout_width="398dp"
                android:layout_height="44dp"
                android:background="@drawable/edit_text_round"
                android:ems="10"
                android:hint="Your Personality"
                android:inputType="textPersonName"
...
                app:layout_constraintHorizontal_bias="0.846"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.432" />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="393dp"
                android:layout_height="562dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="944dp"
                android:layout_weight="4"
                android:calendarViewShown="true"
...
                android:spinnersShown="false"
                android:yearListSelectorColor="#1F2123"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="176dp"
                android:layout_height="90dp"


                android:layout_marginStart="104dp"
                android:layout_marginTop="1292dp"
...
